changed admin page styling

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 MONGODB_PASSWORD="fewdw"
-name="admin1"
-password="admin2"
+name="fred"
+password="fredlepro360@gmail.com"
 
 smtp_email="frederic.alefebvre@gmail.com"
 smtp_password="kdqhtwbnesoakare"
+
+# IN dbconnect.py use MONGODB_PASSWORD
+# IN MAILER USE SMTP ENV VAR
